# DIYtogether

./: .cproject  .gitignore  .project  100  Anotaciones  CMakeLists.txt  Gemini.bat  Gemini.ps1  Gemini.txt  GeminiLite.ps1  GeminiLite.txt  README.md  create_sd_card_layout.ps1  diagnostico_diymon.bat  gemini.txt  idf_component.yml  idf_component_manager.yml  informe_diymon.txt  lv_conf.h  main.c  platformio.ini  sdkconfig  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-c6-devkitc-1.old  sdkconfig.old  sdkconfig.ws1_47ts  sdkconfig.ws1_47ts.old  sdkconfig.ws1_9ts  sdkconfig.ws1_9ts.old  sdkconfigmal
EEZ_EXPORT/: actions.h  images.c  images.h  screens.c  screens.h  ui_image_2_resized.c  ui_image_c4.c  ui_image_fondo.c  ui_image_pesas.c
IMG_converter/: I8.c.ps1  IMG_Converter copy.ps1  IMG_Converter.ps1  L8.c.ps1  RGB565A8.C.ps1  RGB565A8.bin.ps1
IMG_converter/170.c/: 170.c
IMG_converter/4.c/: 4.c
IMG_converter/BTN_9.c/: BTN_9.c
IMG_converter/BTN_9_mask.c/: BTN_9_mask.c
IMG_converter/RSPLS.c/: RSPLS.c
SD/config/: Index - copia.html  Index.html  backup.html  script.js  script.js.txt  style.css
components/bsp/: CMakeLists.txt  Kconfig  bsp.c  bsp_battery.c  bsp_battery.h  bsp_display.c  bsp_i2c.c  bsp_priv.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_sdcard.c  bsp_spi.c  bsp_touch.c  bsp_wifi.c  bsp_wifi.h
components/bsp/WS1.9TS/: bsp_battery.c  bsp_display.c  bsp_i2c.c  bsp_i2c.h  bsp_qmi8658.c  bsp_sdcard.h  bsp_spi.c  bsp_touch.c  bsp_touch.h  bsp_wifi.c  bsp_wifi.h
components/bsp/esp_bsp/: bsp_battery.c  bsp_touch.h
components/bsp/include/: bsp_api.h
components/core/: CMakeLists.txt
components/diymon_bsp/: CMakeLists.txt  Kconfig.projbuild
components/diymon_bsp/WS1.9TS/: .cproject  bsp.c  bsp_battery.h  bsp_display.c  bsp_display.h  bsp_i2c.c  bsp_i2c.h  bsp_qmi8658.c  bsp_qmi8658.h  bsp_sdcard.c  bsp_sdcard.h  bsp_spi.c  bsp_touch.c  bsp_touch.h  bsp_wifi.c
components/diymon_bsp/bsp_original/: CMakeLists.txtborrar  bsp_display.h  bsp_sdcard.h
components/diymon_bsp/include/: bsp_api.h
components/diymon_core/: diymon_evolution.c
components/diymon_ui/: .cproject  .project  BG.c  BG.h  BG_config.c  BG_config.h  CMakeLists.txt  actions.backup  actions.c  actions.h  animation_loader.c  animation_loader.h  attack.c  diymon_ui_helpers.c  diymon_ui_helpers.h  idf_component.yml  images.c  images.h  screen_state.h  screens.c  screens.h  styles.c  train.c  ui.c  ui.h  ui_action_animations.c  ui_action_animations.h  ui_actions_panel.c  ui_actions_panel.h  ui_asset_loader.c  ui_asset_loader.h  ui_config_screen.c  ui_config_screen.h  ui_idle_animation.c  ui_idle_animation.h  ui_image_1_resized.c  ui_image_3_resized.c  ui_image_ah1.c  ui_image_ah2.c  ui_image_ah3.c  (+15 more)
components/diymon_ui/assets/: BG.c  BG.h  BTN_1.c  BTN_2.c  BTN_3.c  BTN_4.c  BTN_5.c  BTN_6.c  BTN_7.c  BTN_8.c  BTN_9.c  EVO_1.c  EVO_2.c  EVO_3.c  EVO_4.c  EVO_5.c  asset_btn_1.c  asset_btn_2.c  asset_btn_3.c  asset_btn_4.c  asset_btn_5.c  asset_btn_6.c  asset_btn_8.c  asset_btn_9.c  asset_evo_1.c  asset_evo_3.c  asset_evo_5.c
components/diymon_ui_panels/: CMakeLists.txt
components/ftp_server/: CMakeLists.txt  ftp_server.c  ftp_server.h
components/iot_button/: .cproject  CMakeLists.txt  idf_component.yml  iot_button.c
components/iot_button/test_apps/main/: .cproject
components/screen_manager/: CMakeLists.txt  screen_manager.c  screen_manager.h
components/service_screen/: CMakeLists.txt  service_screen.c  service_screen.h
components/ui/: CMakeLists.txt  actions.c  actions.h  animation_loader.c  background.h  diymon_ui_helpers.c  diymon_ui_helpers.h  helpers.c  helpers.h  idf_component.yml  screens.h  structs.h  telemetry_task.c  telemetry_task.h  ui.c  ui.h  ui_action_animations.c  ui_action_animations.h  ui_actions_panel.c  ui_actions_panel.h  ui_asset_loader.c  ui_asset_loader.h  ui_assets.h  ui_config_screen.h  ui_idle_animation.c  ui_idle_animation.h  ui_layout.h  ui_state_manager.c  ui_state_manager.h  ui_telemetry.c  ui_telemetry.h  vars.h  welcome_screen.h
components/ui/actions/: action_brightness.c  action_brightness.h  action_config_mode.c  action_config_mode.h  action_evolution.c  action_evolution.h  action_interaction.c  action_interaction.h  action_performance_mode.c  action_performance_mode.h  action_screen.c  action_screen.h  action_system.c  action_system.h  action_zigbee.c  action_zigbee.h
components/ui/assets/: asset_btn_1.c  asset_btn_4.c  asset_evo_2.c
components/ui/assets/fonts/: fonts.h
components/ui/assets/images/: BG.h  BG_config.h  RSPLS.h  asset_btn_2.c  asset_btn_6.c  asset_btn_7.c  asset_btn_7.cBACKUP  asset_evo_4.c  background.h  images.h  ui_assets.c  ui_assets.h
components/ui/assets/styles/: styles.c  styles.h
components/ui/buttons/: btn_1.c  btn_1.h  btn_2.c  btn_2.h  btn_3.c  btn_3.h  btn_4.c  btn_4.h  btn_5.c  btn_5.h  btn_6.c  btn_6.h  btn_7.c  btn_7.h  btn_8.c  btn_8.h  btn_9.c  btn_9.h  button_feedback.c  button_feedback.h  buttons_manager.c  buttons_manager.h  buttons_player.c  buttons_player.h  evo_1.c  evo_1.h  evo_2.c  evo_2.h  evo_3.c  evo_3.h  evo_4.c  evo_4.h  evo_5.c  evo_5.h
components/ui/core/: state_manager.c  state_manager.h  telemetry_manager.c  telemetry_manager.h  telemetry_task.c  telemetry_task.h  ui.c  ui.h
components/ui/screens/: config.c  config.h  screen_interface.h  screens.c  screens.h  welcome.c  welcome.h
components/ui/telemetry/: telemetry_manager.c  telemetry_manager.h  telemetry_task.c  telemetry_task.h
components/web_server/: CMakeLists.txt  web_server.c  web_server.h  web_server_handlers.c  web_server_helpers.c  web_server_page.h  web_server_priv.h
components/wifi_portal/: CMakeLists.txt  wifi_portal.c  wifi_portal.h
components/zigbee_comm/: CMakeLists.txt  zigbee_comm.c
components/zigbee_comm/include/: zigbee_comm.h
components_dependencies/esp_lcd_gc9a01/: CMakeLists.txt  esp_lcd_gc9a01.c  idf_component.yml
components_dependencies/esp_lcd_gc9a01/include/: esp_lcd_gc9a01.h
main/: .cproject  CMakeLists.txt  hardware_manager.c  hardware_manager.c.back  hardware_manager.h  idf_component.yml  main.c
(+50 files in other folders)
