# Fichero: ./components/diymon_ui_panels/CMakeLists.txt
# Fecha: 14/08/2025 - 10:15 am
# Último cambio: Desactivado el componente para evitar conflictos de compilación.
# Descripción: Fichero de compilación para el componente de paneles de la UI. Se ha comentado su contenido para excluir este componente obsoleto del proceso de compilación y resolver errores de identificadores no declarados y dependencias incorrectas.

# idf_component_register(
#     SRCS "action_panels.c"
#     INCLUDE_DIRS "include"
#     
#     REQUIRES 
#         lvgl
#         diymon_ui
#         log
# )